<resources>
    <string name="app_name">CS213-Project5</string>
    <string name="donut_photo">donut photo</string>
    <string name="ru_donuts">RU Donuts!</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_sandwich">Order Sandwich</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="delete_menuitem">Delete</string>
    <string name="orders">Orders</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="menu">Menu</string>
    <string name="coffee_picture">coffee_picture</string>
    <string name="choose_size">Choose Size:</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="vanilla">Vanilla</string>
    <string name="_2_milk">2% Milk</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total:</string>
    <string name="subtotal_0_00">Subtotal: $0.00</string>
    <string name="quantity">Quantity:</string>
    <string name="view_current_orders">View Current Order</string>
    <string name="grand_total">Grand Total: $0.00</string>
    <string name="order_total">Order Total: $0.00</string>
    <string name="placed_orders">Placed Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="current_order">Current Order</string>
    <string name="sales_tax">Sales Tax: $0.00</string>
    <string name="current_total">Total: $0.00</string>
    <string name="choose_protein">Choose Protein:</string>
    <string name="order_sandwiches">Order Sandwiches</string>
    <string name="cheese">Cheese</string>
    <string name="lettuce">Lettuce</string>
    <string name="onion">Onion</string>
    <string name="tomato">Tomato</string>
    <string name="choose_bread">Choose Bread:</string>
    <string name="qty_0">Qty: 0</string>
    <string name="_1_99">$1.99</string>
    <string name="yeast_donut">Yeast Donut</string>
    <string name="plain_donut">Plain Donut</string>


    <string-array name="coffeesize">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string-array name="bread_types">
        <item>Bagel</item>
        <item>Sourdough</item>
        <item>Wheat Bread</item>
    </string-array>
    <string-array name="protein_types">
        <item>Beef</item>
        <item>Chicken</item>
        <item>Salmon</item>
    </string-array>

</resources>