<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="118dp"
        android:layout_height="69dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/lightpink"
        android:padding="16dp"
        android:text="@string/menu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="118dp"
        android:layout_height="69dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/lightpink"
        android:padding="16dp"
        android:text="@string/orders"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="155dp"
        android:layout_height="160dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/coffee_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffeepagepic" />

    <Spinner
        android:id="@+id/coffeeSizeSpinner"
        android:layout_width="255dp"
        android:layout_height="30dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_coffee"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/medpink"
        app:layout_constraintBottom_toTopOf="@+id/coffeeSizeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>